refactor: classification.ipynb optimization

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -59,48 +59,19 @@
     "id": "hkYJ7Dqqpiqn"
    },
    "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "TN1HfQmEpiqo"
-   },
-   "source": [
-    "This section describes a family of BERT-based models that solve a variety of different classification tasks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "sp_OrNbhpiqo"
-   },
-   "source": [
+    "# 1. Introduction to the task\n",
+    "This section describes a family of BERT-based models that solve a variety of different classification tasks.\n",
+    "\n",
     "**Insults detection** is a binary classification task of identying wether a given sequence is an insult of another participant of communication.\n",
     "\n",
     "**Sentiment analysis** is a task of classifying the polarity of the the given sequence. The number of classes may vary depending on the data: positive/negative binary classification, multiclass classification with a neutral class added or with a number of different emotions.\n",
     "\n",
     "The models trained for the **paraphrase detection** task identify whether two sentences expressed with different words convey the same meaning.\n",
     "\n",
-    "**Topic classification** refers to the task of classifying an utterance by the topic which belongs to the conversational domain."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "K-V3g2kipiqq"
-   },
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ygOmNC9R9l_y"
-   },
-   "source": [
+    "**Topic classification** refers to the task of classifying an utterance by the topic which belongs to the conversational domain.\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -109,15 +80,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "o-GoKStT9l_z",
-    "outputId": "2d62c716-dea1-49f0-91b7-a94fd2231b91"
+    "id": "o-GoKStT9l_z"
    },
    "outputs": [],
    "source": [
-    "!pip install --q deeppavlov"
+    "!pip install -q deeppavlov"
    ]
   },
   {
@@ -133,11 +100,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "uKiSHQZCpiqy",
-    "outputId": "a0ef1c80-8537-4440-b5d8-7a960ea7866c"
+    "id": "uKiSHQZCpiqy"
    },
    "outputs": [],
    "source": [
@@ -163,24 +126,10 @@
    },
    "source": [
     "\n",
-    "# 3. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "-j3tJy1c9l_1"
-   },
-   "source": [
-    "## 3.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "cLnbUke-9l_3"
-   },
-   "source": [
+    "# 3. Use the model for prediction\n",
+    "\n",
+    "## 3.1 Predict using Python\n",
+    "\n",
     "After [model installation](#2.-Get-started-with-the-model) build it from the config and use it for prediction."
    ]
   },
@@ -188,12 +137,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000
-    },
-    "id": "fnHw4a6C9l_4",
-    "outputId": "258d5da3-e7a5-4cb4-a5e1-70af3f726beb"
+    "id": "fnHw4a6C9l_4"
    },
    "outputs": [],
    "source": [
@@ -215,11 +159,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QFXXQf3Q9l_6",
-    "outputId": "fa0c3741-d08c-4b92-d040-11fb8e779c53"
+    "id": "QFXXQf3Q9l_6"
    },
    "outputs": [
     {
@@ -272,15 +212,8 @@
     "id": "4CvMnvm3piq4"
    },
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ir-RPfUrpiq4"
-   },
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
     "Or make predictions for samples from *stdin*."
    ]
   },
@@ -301,15 +234,8 @@
     "id": "HHiULaejpiq5"
    },
    "source": [
-    "# 4. Evaluation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "xKizEI1-8HpL"
-   },
-   "source": [
+    "# 4. Evaluation\n",
+    "\n",
     "## 4.1 Evaluate from Python"
    ]
   },
@@ -352,43 +278,14 @@
     "id": "pxH7jE7wpiq7"
    },
    "source": [
-    "# 5. Train the model on your data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Xo9slD6v9l_7"
-   },
-   "source": [
+    "# 5. Train the model on your data\n",
     "\n",
-    "## 5.1 Train your model from Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "4HVc5W73piq8"
-   },
-   "source": [
-    "### Provide your data path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6T4aceh89l_8"
-   },
-   "source": [
-    "To train the model on your data, you need to change the path to the training data in the *config_file*. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5BC6SQW-9l_8"
-   },
-   "source": [
+    "## 5.1 Train your model from Python",
+    "\n",
+    "### Provide your data path",
+    "\n",
+    "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
+    "\n",
     "Parse the *config_file* and change the path to your data from Python."
    ]
   },
@@ -396,11 +293,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "WcAH6pn79l_8",
-    "outputId": "fff2fecb-4dba-4d56-d674-446664a7b1f1"
+    "id": "WcAH6pn79l_8"
    },
    "outputs": [
     {
@@ -462,15 +355,7 @@
    },
    "source": [
     "\n",
-    "### Train dataset format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Xmwcjgld9mAA"
-   },
-   "source": [
+    "### Train dataset format\n",
     "\n",
     "### Train the model using new config"
    ]
@@ -527,15 +412,8 @@
     "id": "BKoWBEHgC7XM"
    },
    "source": [
-    "## 5.2 Train your model from CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "72Ll9CVM8KSb"
-   },
-   "source": [
+    "## 5.2 Train your model from CLI\n",
+    "\n",
     "To train the model on your data, create a copy of a config file and change the *data_path* variable in it. After that, train the model using your new *config_file*. You can also change any of the hyperparameters of the model."
    ]
   },
@@ -556,15 +434,8 @@
     "id": "oAuHy4efpirA"
    },
    "source": [
-    "# 6. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IA75g-cTpirB"
-   },
-   "source": [
+    "# 6. Models list\n",
+    "\n",
     "The table presents a list of all of the classification models available in DeepPavlov Library."
    ]
   },
