remove config hyperlinks from classification.ipynb

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -280,9 +280,9 @@
    "source": [
     "# 5. Train the model on your data\n",
     "\n",
-    "## 5.1 Train your model from Python",
+    "## 5.1 Train your model from Python\n",
     "\n",
-    "### Provide your data path",
+    "### Provide your data path\n",
     "\n",
     "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
     "\n",
@@ -447,21 +447,24 @@
    "source": [
     "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
     "| :--- | --- | --- | --- | --- | --- | ---: |\n",
-    "| [insults_kaggle_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/insults_kaggle_bert.json) | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
-    "| [paraphraser_rubert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_rubert.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
-    "| [paraphraser_convers_distilrubert_2L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_2L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
-    "| [paraphraser_convers_distilrubert_6L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_6L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
-    "| [sentiment_sst_conv_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/sentiment_sst_conv_bert.json) | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
-    "| [sentiment_twitter](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/sentiment_twitter.json) | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
-    "| [rusentiment_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/rusentiment_bert.json) | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
-    "| [rusentiment_convers_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/rusentiment_convers_bert.json) | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
-    "| [topics_distilbert_base_uncased](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/topics_distilbert_base_uncased.json) | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
+    "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
+    "| paraphraser_rubert | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
+    "| paraphraser_convers_distilrubert_2L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
+    "| paraphraser_convers_distilrubert_6L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
+    "| sentiment_sst_conv_bert | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
+    "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
+    "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
+    "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
+    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
    ]
   }
  ],
  "metadata": {
-    "accelerator": "GPU"
-   },
-   "nbformat": 4,
-   "nbformat_minor": 4
+  "accelerator": "GPU",
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
