fix: language_info error

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -460,10 +460,7 @@
   }
  ],
  "metadata": {
-  "accelerator": "GPU",
-  "language_info": {
-   "name": "python"
-  }
+  "accelerator": "GPU"
  },
  "nbformat": 4,
  "nbformat_minor": 4
