--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wA2NayPu9l_r"
-   },
+   "metadata": {},
    "source": [
     "#### Named Entity Recognition (NER)"
    ]
@@ -18,9 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UkOFKCKJ9l_x"
-   },
+   "metadata": {},
    "source": [
     "# Table of contents \n",
     "\n",
@@ -101,9 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ygOmNC9R9l_y"
-   },
+   "metadata": {},
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
@@ -111,13 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "o-GoKStT9l_z"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --q deeppavlov"
+    "!pip install -q deeppavlov"
    ]
   },
   {
@@ -148,9 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PEYknuKK9l_y"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "# 3. Use the model for prediction"
@@ -158,18 +148,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-j3tJy1c9l_1"
-   },
+   "metadata": {},
    "source": [
     "## 3.1 Predict using Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cLnbUke-9l_3"
-   },
+   "metadata": {},
    "source": [
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
@@ -177,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "fnHw4a6C9l_4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import build_model\n",
@@ -199,13 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QFXXQf3Q9l_6",
-    "outputId": "a6087769-fafc-4821-8254-465bc98b9886"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -216,7 +194,7 @@
        "  ['B-PERSON', 'I-PERSON', 'O', 'B-ORG']]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,9 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RLeAxnlu9l_7"
-   },
+   "metadata": {},
    "source": [
     "## 3.2 Predict using CLI"
    ]
@@ -334,9 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xo9slD6v9l_7"
-   },
+   "metadata": {},
    "source": [
     "## 5.1 Train your model from Python"
    ]
@@ -350,9 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6T4aceh89l_8"
-   },
+   "metadata": {},
    "source": [
     "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
     " \n",
@@ -362,13 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "WcAH6pn79l_8",
-    "outputId": "168d496d-453d-4db6-f927-18420f577e4d"
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -390,16 +356,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MCK5fbHM9l_9"
-   },
+   "metadata": {},
    "source": [
     "Provide a *data_path* to your own dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,10 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "QkqD3RJi9l_-"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# provide a path to the train file\n",
@@ -422,9 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pK7yYFFe9l__"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### Train dataset format"
@@ -432,9 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "z2qz4SMl9l__"
-   },
+   "metadata": {},
    "source": [
     "To train the model, you need to have a txt-file with a dataset in the following format:"
    ]
@@ -471,18 +429,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NhubTsRJ9mAA"
-   },
+   "metadata": {},
    "source": [
     "The source text is **tokenized** and **tagged**. For each token, there is a tag with **BIO** markup. Tags are separated from tokens with **whitespaces**. Sentences are separated with **empty lines**."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xmwcjgld9mAA"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### Train the model using new config"
@@ -491,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "_ETDV4J99mAA"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ner_model = train_model(model_config)"
@@ -501,9 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XUIG-3q-BqeS"
-   },
+   "metadata": {},
    "source": [
     "Use your model for prediction."
    ]
@@ -511,13 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "nDTk4ascBpuI",
-    "outputId": "98d57a71-2dd8-4fa1-b8eb-13ddaaad7e15"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -528,7 +472,7 @@
        "  ['B-PERSON', 'I-PERSON', 'O', 'B-ORG']]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,9 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BKoWBEHgC7XM"
-   },
+   "metadata": {},
    "source": [
     "## 5.2 Train your model from CLI"
    ]
@@ -549,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "E-Zp3SXvDS6_"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov train ner_ontonotes_bert_torch"
@@ -630,30 +570,8 @@
   }
  ],
  "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-     "collapsed_sections": [],
-     "name": "NER.ipynb",
-     "provenance": []
-    },
-    "kernelspec": {
-     "display_name": "Python 3.8.10 ('.venv': venv)",
-     "language": "python",
-     "name": "python3"
-    },
-    "language_info": {
-     "codemirror_mode": {
-      "name": "ipython",
-      "version": 3
-     },
-     "file_extension": ".py",
-     "mimetype": "text/x-python",
-     "name": "python",
-     "nbconvert_exporter": "python",
-     "pygments_lexer": "ipython3",
-     "version": "3.8.10"
-    }
-   },
-   "nbformat": 4,
-   "nbformat_minor": 4
+  "accelerator": "GPU"
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
