docs: classification rst docs replaced with ipynb and minor docs fixes (#1600)
Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>

--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wA2NayPu9l_r"
-   },
+   "metadata": {},
    "source": [
     "#### Named Entity Recognition (NER)"
    ]
@@ -18,9 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UkOFKCKJ9l_x"
-   },
+   "metadata": {},
    "source": [
     "# Table of contents \n",
     "\n",
@@ -101,23 +97,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ygOmNC9R9l_y"
-   },
+   "metadata": {},
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
+    "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "o-GoKStT9l_z"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --q deeppavlov"
+    "!pip install -q deeppavlov"
    ]
   },
   {
@@ -140,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ner_ontonotes_bert_torch` here is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`ner_ontonotes_bert_torch` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
@@ -148,9 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PEYknuKK9l_y"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "# 3. Use the model for prediction"
@@ -158,18 +148,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-j3tJy1c9l_1"
-   },
+   "metadata": {},
    "source": [
     "## 3.1 Predict using Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cLnbUke-9l_3"
-   },
+   "metadata": {},
    "source": [
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
@@ -177,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "fnHw4a6C9l_4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import build_model\n",
@@ -199,13 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QFXXQf3Q9l_6",
-    "outputId": "a6087769-fafc-4821-8254-465bc98b9886"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -216,7 +194,7 @@
        "  ['B-PERSON', 'I-PERSON', 'O', 'B-ORG']]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,9 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RLeAxnlu9l_7"
-   },
+   "metadata": {},
    "source": [
     "## 3.2 Predict using CLI"
    ]
@@ -238,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also get predictions in an interactive mode through CLI."
+    "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
   {
@@ -288,7 +264,7 @@
     "\n",
     "`ner_f1` is measured on the entity-level (actual text spans should match exactly)\n",
     "\n",
-    "`ner_token_f1` is measured on a token level (correct tokens from not fully extracted entities will still be counted as TPs)"
+    "`ner_token_f1` is measured on a token level (correct tokens from not fully extracted entities will still be counted as TPs (true positives))"
    ]
   },
   {
@@ -334,9 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xo9slD6v9l_7"
-   },
+   "metadata": {},
    "source": [
     "## 5.1 Train your model from Python"
    ]
@@ -350,32 +324,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6T4aceh89l_8"
-   },
+   "metadata": {},
    "source": [
-    "To train the model on your data, you need to change the path to the training data in the *config_file*. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5BC6SQW-9l_8"
-   },
-   "source": [
+    "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
+    " \n",
     "Parse the *config_file* and change the path to your data from Python."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "WcAH6pn79l_8",
-    "outputId": "168d496d-453d-4db6-f927-18420f577e4d"
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -391,22 +350,20 @@
     "\n",
     "model_config = parse_config('ner_ontonotes_bert_torch')\n",
     "\n",
-    "#  dataset that the model was trained on\n",
+    "# dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MCK5fbHM9l_9"
-   },
+   "metadata": {},
    "source": [
     "Provide a *data_path* to your own dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,21 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "QkqD3RJi9l_-"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# provide a path to the train file\n",
-    "model_config[\"dataset_reader\"][\"data_path\"] = \"contents/train.txt\""
+    "model_config['dataset_reader']['data_path'] = 'contents/train.txt'"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pK7yYFFe9l__"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### Train dataset format"
@@ -439,9 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "z2qz4SMl9l__"
-   },
+   "metadata": {},
    "source": [
     "To train the model, you need to have a txt-file with a dataset in the following format:"
    ]
@@ -478,18 +429,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NhubTsRJ9mAA"
-   },
+   "metadata": {},
    "source": [
-    "The source text is **tokenized** and **tagged**. For each token, there is a tag with BIO markup. Tags are separated from tokens with **whitespaces**. Sentences are separated with **empty lines**."
+    "The source text is **tokenized** and **tagged**. For each token, there is a tag with **BIO** markup. Tags are separated from tokens with **whitespaces**. Sentences are separated with **empty lines**."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xmwcjgld9mAA"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### Train the model using new config"
@@ -498,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "_ETDV4J99mAA"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ner_model = train_model(model_config)"
@@ -508,9 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XUIG-3q-BqeS"
-   },
+   "metadata": {},
    "source": [
     "Use your model for prediction."
    ]
@@ -518,13 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "nDTk4ascBpuI",
-    "outputId": "98d57a71-2dd8-4fa1-b8eb-13ddaaad7e15"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -535,7 +472,7 @@
        "  ['B-PERSON', 'I-PERSON', 'O', 'B-ORG']]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,9 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BKoWBEHgC7XM"
-   },
+   "metadata": {},
    "source": [
     "## 5.2 Train your model from CLI"
    ]
@@ -556,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "E-Zp3SXvDS6_"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov train ner_ontonotes_bert_torch"
@@ -575,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The table presents a list of all of the NER-models available in DeepPavlov Library."
+    "The table presents a list of all of the NER-models available in the DeepPavlov Library."
    ]
   },
   {
@@ -630,41 +563,14 @@
     "| **TIME**         | Times smaller than a day                               |\n",
     "| **PERCENT**      | Percentage (including “%”)                             |\n",
     "| **MONEY**        | Monetary values, including unit                        |\n",
-    "| **QUANTITY**     | Measurements, as of weight or distance                 |\n",
-    "| **ORDINAL**      | “first”, “second”                                      |\n",
+    "| **QUANTITY**     | Measurements such as weight or distance                |\n",
+    "| **ORDINAL**      | “first”, “second”, etc.                                |\n",
     "| **CARDINAL**     | Numerals that do not fall under another type           |"
    ]
   }
  ],
  "metadata": {
-  "accelerator": "GPU",
-  "colab": {
-   "collapsed_sections": [],
-   "name": "test.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "09203ac7cd8d5ba0e6b7750906c2c9e7bc30ed1d0e736c7ffbb7be05138d4f4a"
-   }
-  }
+  "accelerator": "GPU"
  },
  "nbformat": 4,
  "nbformat_minor": 4
