--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wA2NayPu9l_r"
-   },
+   "metadata": {},
    "source": [
     "#### Context Question Answering"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sUXb756_pBpb"
-   },
+   "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/SQuAD.ipynb)"
    ]
@@ -27,9 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UkOFKCKJ9l_x"
-   },
+   "metadata": {},
    "source": [
     "# Table of contents \n",
     "\n",
@@ -60,18 +54,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6rlEvcLSpBpe"
-   },
+   "metadata": {},
    "source": [
     "# 1. Introduction to the task"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "t1HDPkc-pBpe"
-   },
+   "metadata": {},
    "source": [
     "Context Question Answering is a task of finding a fragment with an answer to a question in a given segment of context."
    ]
@@ -85,9 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YbU1PKjD8Ho3"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "In meteorology, precipitation is any product of the condensation \n",
@@ -101,9 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NtJfjLT3pBpf"
-   },
+   "metadata": {},
    "source": [
     "**Question**:\n",
     "```\n",
@@ -113,9 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XH6JS7bs8Ho5"
-   },
+   "metadata": {},
    "source": [
     "**Answer**: \n",
     "```\n",
@@ -125,9 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vEjlhWiNpBpi"
-   },
+   "metadata": {},
    "source": [
     "Datasets that follow this task format:\n",
     "\n",
@@ -138,39 +120,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NzHeUOeqpBpk"
-   },
+   "metadata": {},
    "source": [
     "# 2. Get started with the model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ygOmNC9R9l_y"
-   },
+   "metadata": {},
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
+    "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "o-GoKStT9l_z"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --q deeppavlov"
+    "!pip install -q deeppavlov"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vTBqvEtdpBpm"
-   },
+   "metadata": {},
    "source": [
     "Then make sure that all the required packages for the model are installed."
    ]
@@ -178,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "RYx-1sDqpBpn"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!python -m deeppavlov install squad_bert"
@@ -188,11 +160,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "i6hPLgzvpBpn"
-   },
+   "metadata": {},
    "source": [
-    "`squad_torch_bert` here is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`squad_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
@@ -200,9 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PEYknuKK9l_y"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "# 3. Use the model for prediction"
@@ -210,18 +178,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-j3tJy1c9l_1"
-   },
+   "metadata": {},
    "source": [
     "## 3.1 Predict using Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cLnbUke-9l_3"
-   },
+   "metadata": {},
    "source": [
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
@@ -229,9 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "fnHw4a6C9l_4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import build_model\n",
@@ -241,11 +203,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ec572M3jpBpp"
-   },
+   "metadata": {},
    "source": [
-    "**Input**: List[context, question]\n",
+    "**Input**: List[context], List[question]\n",
     "\n",
     "**Output**: List[answer, start_character, logit]"
    ]
@@ -253,13 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QFXXQf3Q9l_6",
-    "outputId": "c56dbc60-0730-47d6-835f-9317ac40a4b5"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,7 +221,7 @@
        "[['a library for NLP and dialog systems'], [14], [200928.390625]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,28 +232,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RLeAxnlu9l_7"
-   },
+   "metadata": {},
    "source": [
     "## 3.2 Predict using CLI"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "iE3j768spBps"
-   },
+   "metadata": {},
    "source": [
-    "You can also get predictions in an interactive mode through CLI."
+    "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "nG8DoLyCtue7"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!python -m deeppavlov interact squad_bert -d"
@@ -307,18 +255,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fOga6p9KpBps"
-   },
+   "metadata": {},
    "source": [
     "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-0I_vIirpBpt"
-   },
+   "metadata": {},
    "source": [
     "Or make predictions for samples from *stdin*."
    ]
@@ -326,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "xOUND8frpBpt"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!python -m deeppavlov predict squad_bert -f <file-name>"
@@ -336,18 +278,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NMynAl4OpBpt"
-   },
+   "metadata": {},
    "source": [
     "# 4. Train the model on your data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xo9slD6v9l_7"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## 4.1 Train your model from Python"
@@ -355,27 +293,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dhE1rF4fpBpt"
-   },
+   "metadata": {},
    "source": [
     "### Provide your data path"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6T4aceh89l_8"
-   },
+   "metadata": {},
    "source": [
     "To train the model on your data, you need to change the path to the training data in the *config_file*. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "5BC6SQW-9l_8"
-   },
+   "metadata": {},
    "source": [
     "Parse the *config_file* and change the path to your data from Python."
    ]
@@ -383,13 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "WcAH6pn79l_8",
-    "outputId": "c0573246-63e6-4246-c618-5ac1d901314b"
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -411,23 +337,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MCK5fbHM9l_9"
-   },
+   "metadata": {},
    "source": [
     "Provide a *data_path* to your own dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "qzb2zO5wpBpu",
-    "outputId": "f7d2c63b-6f23-4667-ef4c-0ccabafaeb9e"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# download and unzip a new example dataset\n",
@@ -437,9 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PL2URAdKq99K"
-   },
+   "metadata": {},
    "source": [
     "Note that if you want to provide your own dataset, it should have the same format as the SQuAD dataset downloaded in this cell."
    ]
@@ -447,29 +363,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "QkqD3RJi9l_-"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# provide a path to the train file\n",
-    "model_config[\"dataset_reader\"][\"data_path\"] = \"/contents/train-v1.1.json\""
+    "model_config['dataset_reader']['data_path'] = '/contents/train-v1.1.json'"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "digO99gl8HpJ"
-   },
+   "metadata": {},
    "source": [
     "### SQuAD dataset info"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "G9EtYFaX8HpJ"
-   },
+   "metadata": {},
    "source": [
     "There are *two* versions of the SQuAD dataset available for training at the moment: \n",
     "\n",
@@ -480,9 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xmwcjgld9mAA"
-   },
+   "metadata": {},
    "source": [
     "### Train the model using new config"
    ]
@@ -490,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "_ETDV4J99mAA"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = train_model(model_config)"
@@ -500,9 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XUIG-3q-BqeS"
-   },
+   "metadata": {},
    "source": [
     "Use your model for prediction."
    ]
@@ -510,13 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "nDTk4ascBpuI",
-    "outputId": "02ba185e-f776-4e1e-e0ef-b0d9dad8c33b"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -535,9 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BKoWBEHgC7XM"
-   },
+   "metadata": {},
    "source": [
     "## 4.2 Train your model from CLI"
    ]
@@ -545,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "E-Zp3SXvDS6_"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!python -m deeppavlov train squad_bert"
@@ -555,18 +449,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "AYXNJgap8HpL"
-   },
+   "metadata": {},
    "source": [
     "# 5. Evaluate "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xKizEI1-8HpL"
-   },
+   "metadata": {},
    "source": [
     "## 5.1 Evaluate from Python"
    ]
@@ -574,9 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "vcOy_x8S8HpL"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import evaluate_model\n",
@@ -586,9 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JoeJFY7Q8HpM"
-   },
+   "metadata": {},
    "source": [
     "## 5.1 Evaluate from CLI"
    ]
@@ -596,9 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "NfYruNkT8HpM"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov evaluate squad_bert -d"
@@ -606,27 +490,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "csO-hGQvpBpx"
-   },
+   "metadata": {},
    "source": [
     "# 6. Models list"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JYftVMtmpBpx"
-   },
+   "metadata": {},
    "source": [
     "The table presents a list of all of the Context Question Answering models available in DeepPavlov Library."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6QHx_g25pBpy"
-   },
+   "metadata": {},
    "source": [
     "| Config name  | Dataset | Language | Model Size | F1 score | EM  |\n",
     "| :--- | --- | --- | --- | --- | ---: |\n",
@@ -637,42 +515,10 @@
     "| squad_ru_convers_distilrubert_2L | SberQuAD | Ru | 1.2 GB | 65.20 | 44.52 |\n",
     "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 | \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
-  "accelerator": "GPU",
-  "colab": {
-   "collapsed_sections": [],
-   "name": "SQuAD.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "09203ac7cd8d5ba0e6b7750906c2c9e7bc30ed1d0e736c7ffbb7be05138d4f4a"
-   }
-  }
+  "accelerator": "GPU"
  },
  "nbformat": 4,
  "nbformat_minor": 4
